--- a/package.json
+++ b/package.json
@@ -10,10 +10,21 @@
   },
   "dependencies": {
     "@mantine/core": "8.1.2",
+    "@mantine/dropzone": "^8.1.2",
     "@mantine/hooks": "8.1.2",
+    "@mantine/notifications": "^8.1.2",
+    "@react-three/drei": "^10.5.0",
+    "@react-three/fiber": "^9.2.0",
+    "@tabler/icons-react": "^3.34.0",
+    "@types/three": "^0.178.1",
+    "axios": "^1.10.0",
     "next": "15.2.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-json-view": "^1.21.3",
+    "recharts": "^3.1.0",
+    "three": "^0.178.0",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@types/node": "22.13.11",
